# AOC2025

./: .gitignore  CMakeLists.txt  README.md  main.cpp
day1/: CMakeLists.txt  day1.cpp
day10/: CMakeLists.txt  day10.cpp
day11/: CMakeLists.txt  day11.cpp
day12/: CMakeLists.txt  day12.cpp
day2/: CMakeLists.txt  day2.cpp
day3/: CMakeLists.txt  day3.cpp
day4/: CMakeLists.txt  day4.cpp
day5/: CMakeLists.txt  day5.cpp
day6/: CMakeLists.txt  day6.cpp
day7/: CMakeLists.txt  day7.cpp
day8/: CMakeLists.txt  day8.cpp
day9/: CMakeLists.txt  day9.cpp
utils/: grid.h  grid_graph.h  input.h  string_utils.h  timer.h
